--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
 		<streamy.version>${project.version}</streamy.version>
 
-		<spring-cloud.version>3.2.4</spring-cloud.version>
+		<spring-cloud.version>3.2.5</spring-cloud.version>
 		<springfox.version>2.9.2</springfox.version>
 		<springdoc.version>1.6.6</springdoc.version>
 		<springfox.version>3.0.0</springfox.version>
@@ -170,6 +170,30 @@
 						</manifestEntries>
 					</archive>
 				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadoc</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Always create source jar. -->
+			<plugin>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
